--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <!-- Top grey bar -->
     <div style="w-full bg-gray-800 py-4 px-6 flex justify-center">
-      <button id="makychat-btn" style="bg-[#3b82f6] px-5 py-2 rounded-lg font-semibold hover:bg-[#2563eb] active:bg-[#1e40af]">
-        Go to MakyChat
-      </button>
+	      <button id="makychat-btn" style="bg-[#3b82f6] px-5 py-2 rounded-lg font-semibold hover:bg-[#2563eb] active:bg-[#1e40af]">
+		Go to MakyChat
+	      </button>
     </div>
 
 	<!-- Header -->
@@ -145,7 +145,7 @@
 --      end)
 
       chatBtn:on("click", function()
-        gurt.location.goto("gurt://makychat/home")
+        gurt.location.goto("gurt://localhost/home")
       end)
     </script>
 
