cleaning up the landing page, more

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         A banking experience designed for modern life—secure encryption, independent audits, and a clean interface that makes managing money fast and stress-free.
       </p>
       <button id="signup-btn" style="bg-[#3b82f6] text-white px-6 py-3 rounded-xl font-semibold shadow-lg hover:bg-[#2563eb] active:bg-[#1e40af] z-10">
-        Create Your Account
+        Go to Login/Home
       </button>
     </section>
 
