--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Top grey bar -->
     <div style="w-full bg-gray-800 py-4 px-6 flex justify-center">
 	      <button id="makychat-btn" style="bg-[#3b82f6] px-5 py-2 rounded-lg font-semibold hover:bg-[#2563eb] active:bg-[#1e40af]">
-		Go to Login & Home
+		Go to Login/Home
 	      </button>
     </div>
 
@@ -78,6 +78,21 @@
 
     <!-- Signup Page -->
     <main id="signup" style="hidden flex flex-col items-center justify-center flex-1 px-6 py-12 w-full">
+      <div style="bg-[#0f2343] p-10 rounded-2xl shadow-lg w-full max-w-md text-center mb-12">
+        <h2 style="text-2xl font-bold mb-4">Create Your Account</h2>
+        <form id="signup-form" style="flex flex-col gap-4">
+          <input type="text" name="full_name" placeholder="Full Name" required style="p-3 rounded-md text-black" />
+          <input type="email" name="email" placeholder="Email Address" required style="p-3 rounded-md text-black" />
+          <input type="password" name="password" placeholder="Password" required style="p-3 rounded-md text-black" />
+          <button type="submit" style="bg-[#3b82f6] text-white py-3 rounded-lg font-semibold hover:bg-[#2563eb] active:bg-[#1e40af] mt-2">
+            Sign Up
+          </button>
+        </form>
+        <p id="signup-status" style="text-sm opacity-70 mt-4"></p>
+        <button id="back-btn" style="mt-6 bg-gray-600 px-4 py-2 rounded-md hover:bg-gray-500">
+          ← Back to Home
+        </button>
+      </div>
       <!-- Copyright below signup box -->
       <div style="w-full bg-gray-800 py-4 px-6 flex justify-center rounded-lg">
 	      <div style="opacity-60 text-sm text-center">
@@ -86,6 +101,16 @@
     </div>
 
     </main>
+
+    <!-- Lua -->
+    <script type="application/lua">
+      local chatBtn = gurt.select("#makychat-btn")
+
+
+      chatBtn:on("click", function()
+        gurt.location.goto("gurt://localhost/home")
+      end)
+    </script>
 
   </body>
 </html>
