replacing "localhost" with "makyma.ky"

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       local otherBtn = gurt.select("#signup-btn")
 
       otherBtn:on("click", function()
-        gurt.location.goto("gurt://localhost/home")
+        gurt.location.goto("gurt://makyma.ky/home")
       end)
       
       chatBtn:on("click", function()
-        gurt.location.goto("gurt://localhost/home")
+        gurt.location.goto("gurt://makyma.ky/home")
       end)
       
     </script>
