--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       <!-- Card 3 -->
       <div style="flex-1 bg-[#0b1730] p-6 rounded-lg shadow-md">
-        <h3 style="text-xl font-semibold mb-2">⚡ Fast & Modern</h3>
-        <p style="opacity-80">Instant transfers and sleek design.</p>
+        <h3 style="text-xl font-semibold mb-2">⚡ Versatile</h3>
+        <p style="opacity-80">An ecosystem with chat apps, bank apps, and even GAMBLING.</p>
       </div>
 
     </div>
