crediting ArsonFlare for hosting

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!-- Copyright below signup box -->
       <div style="w-full bg-gray-800 py-4 px-6 flex justify-center rounded-lg">
 	      <div style="opacity-60 text-sm text-center">
-		© 2025 MakyMaky (麥麥). All rights reserved.
+		© 2025 MakyMaky (麥麥). Hosted with ArsonFlare :)
 	      </div>
     </div>
 
