Better description on the main page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home" style="flex flex-col items-center justify-center flex-1 text-center px-6 relative w-full">
       <h1 style="text-5xl font-extrabold mb-4 z-10">Welcome to <span style="text-[#3b82f6]"> MakyMaky (麥麥)</span></h1>
       <p style="text-lg opacity-80 max-w-2xl mb-6 z-10">
-        A banking experience designed for modern life—secure encryption, independent audits, and a clean interface that makes managing money fast and stress-free.
+        A whole ecosystem that you can survive in for the rest of your gurted days. We have an all-in-one login system so that all of your money and assets are secure. And gambling.
       </p>
       <button id="signup-btn" style="bg-[#3b82f6] text-white px-6 py-3 rounded-xl font-semibold shadow-lg hover:bg-[#2563eb] active:bg-[#1e40af] z-10">
         Go to Login/Home
